fix identation againt and set overflow The overflow has been set to y axis for vertical scrollbar

--- a/src/res/style.css
+++ b/src/res/style.css
@@ -176,9 +176,9 @@ header {
     -ms-user-select: none;
     user-select: none;
     /* border: 1px solid #000; */
-}
-
-/* Hide the browser's default checkbox */
+  }
+  
+  /* Hide the browser's default checkbox */
 .check-container input {
     position: absolute;
     opacity: 0;
@@ -186,8 +186,8 @@ header {
     height: 0;
     width: 0;
 }
-
-/* Create a custom checkbox */
+  
+  /* Create a custom checkbox */
 .checkmark {
     position: absolute;
     top: 1px;
@@ -198,41 +198,31 @@ header {
     border: 1px solid #cdcdcd;
     transition-duration: 400ms;
 }
-
-/* On mouse-over, add a grey background color */
+  
+  /* On mouse-over, add a grey background color */
 .check-container:hover input ~ .checkmark {
     background-color: #ccc;
 }
-
-/* When the checkbox is checked, add a blue background */
+  
+  /* When the checkbox is checked, add a blue background */
 .check-container input:checked ~ .checkmark {
     background-color: #84cc16;
     border: 1px solid #64a118;
 }
-
-/* Create the checkmark/indicator (hidden when not checked) */
+  
+  /* Create the checkmark/indicator (hidden when not checked) */
 .checkmark:after {
     content: "";
     position: absolute;
     display: none;
 }
-
-/* Show the checkmark when checked */
+  
+  /* Show the checkmark when checked */
 .check-container input:checked ~ .checkmark:after {
-    displa    left: 6px;
-    top: 1px;
-    width: 4px;
-    height: 11px;
-    border: solid white;
-    border-width: 0 3px 3px 0;
-    -webkit-transform: rotate( 
-    45deg);
-    -ms-transform: rotate(45deg);
-    transform: rotate( 
-    45deg);y: block;
+    display: block;
 }
-
-/* Style the checkmark/indicator */
+  
+  /* Style the checkmark/indicator */
 .check-container .checkmark:after {
     left: 6px;
     top: 1px;
@@ -241,10 +231,10 @@ header {
     border: solid white;
     border-width: 0 3px 3px 0;
     -webkit-transform: rotate( 
-    45deg);
+45deg);
     -ms-transform: rotate(45deg);
     transform: rotate( 
-    45deg);
+45deg);
 }
 
   /* End custom checkbox styles */
@@ -254,7 +244,7 @@ header {
 #task-list-container {
     scrollbar-width: thin;
     scrollbar-color: white #f44336;
-    overflow: auto;
+    overflow-y: auto;
 }
   
 /* Works on Chrome, Edge, and Safari */
